<resources>
    <string name="app_name">Cowrywise Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency">Currency</string>
    <string name="calculator">Calculator</string>
    <string name="period">.</string>
    <string name="_0_0">0.0</string>
    <string name="spinner_item_drop_down_image_desc">Dropdown icon</string>
    <string name="search_currency_hint">Enter country name or code</string>
    <string name="list_of_a_currencies">List of symbols</string>
    <string name="framgent_covert_btn">Convert</string>
    <string name="appbar_text">Sign up</string>
    <string name="hamburger_icon">Hamburger icon</string>
    <string name="exchange_icon">Exchange icon</string>
    <string name="fake_spinner_icon">Fake spinner icon</string>
    <string name="no_network">No network available …</string>
    <string name="enter_amount">Enter amount …</string>
    <string name="error_fetching_rates">Error fetching rates …</string>
</resources>
