<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".convertamount.ConvertAmountFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/title_top_margin"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/currency"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculator"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/period"
            android:textAlignment="textStart"
            android:textColor="@color/app_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/id_layout_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittxt_currency_from"
                android:imeOptions="actionDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:layout_marginStart="@dimen/editxt_padding"
                android:fontFamily="@font/montserrat_alternates"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal"
                android:padding="@dimen/editxt_padding"
                android:textSize="@dimen/dimen_edittxt_size"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/currencyInputStyle"
                tools:text="NGN"
                android:id="@+id/txtvw_currency_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_layout_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/id_layout_from">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittxt_currency_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editxt_padding"
                android:padding="@dimen/editxt_padding"
                android:layout_weight="4"
                android:background="@null"
                android:enabled="false"
                android:fontFamily="@font/montserrat_alternates"
                android:hint="@string/_0_0"
                android:inputType="text"
                android:textSize="@dimen/dimen_edittxt_size" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/currencyInputStyle"
                tools:text="GBP"
                android:id="@+id/txtvw_currency_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convert_btn"
            android:text="@string/framgent_covert_btn"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/id_layout_to"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            app:layout_constraintGuide_end="24dp"
            android:id="@+id/bottom_guideline"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            app:layout_constraintGuide_begin="24dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            app:layout_constraintGuide_end="24dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
